fixed position of header made it always visible

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,11 @@
+#navbar-example2 {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    top: 0;
+}
+
 input {
     border: none;
     width: 60px;
